2009-10-23  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* Makefile: 追加
	* version.rb: 追加

2009-10-23  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* DeepSpace#disconnect: ソケットを正しくクローズするようにした.

2009-10-21  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy-trunkとマージ

2009-10-02  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* DeepSpace#initialize: ipv4のみのマシン対応

2008-09-17  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Reference#==, equal?, hash: ローカル実行に変更
	* Organizer#deep_space, connect_deep_space_with_port,
	  disconnect_deep_space, id2obj: 排他制御
	* DeepSpace: DISABLE_GC 対応

2008-09-09  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Reference#inspect: サービス停止中の処理

2008-09-02  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Session#start: 例外発生時の処理
	* Accepter#stop: ditto.
	* Reference#inspect: サービス停止中の処理
	* Organizer#stop: ditto.
	* Organizer#when_connected: ditto.
	* evaluator: SystemExitの取り扱い
	* DeepConnect#when_disconnected: 追加

	* when_disconnected
	
	* deep-space: @export_roots の排他制御追加
	* deep-space#deregister_roots_to_peer:
	    すでに登録されているときは, 登録をリクエストしない

2008-08-26  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* to_** シリーズのメソッドスペックを追加
	* Reference#method_missing の to_** の特別扱いの削除

	* GC周りのバグ修正

	* deep-space の referctoring
	* メッセージ``!'' の対応(Ruby1.9)

2008-08-22  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* to_splat 対応
	
	* Reference#inspect: 表示問題解消

	* Module#===: 再定義

	* new reference
	  - できるだけデレゲートする版
	* block args 
	  - バグがあった

2008-08-21  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Future: Ruby 1.9 対応
	  - delegator の振る舞いが違う

2008-08-15  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Session: 不必要なインスタンス変数削除

	* Organizer.id2obj での IllegalObject 問題解消
	* block_yieldのバグ解消

2008-08-08  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* 接続時のプロトコル変更
	* session個別指定
	  + connect時コールバック(when_connect_proc)
	
	* Reference.release
	* referenceの不正アクセスチェック

2008-08-07  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* block yield 改変版

2008-08-01  Keiju Ishitsuka  <keiju@ishitsuka.com>
